testData/org/elixir_lang/inspection/no_parentheses_many_strict_test_case/MatchedCallOperationKeywordValue.ex
[key: function positional<error descr="unexpected comma.  Parentheses are required to solve ambiguity in nested calls.">,</error> inner_key: inner_value]